// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantButton accent snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(155, 81, 224); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 0px 10px;"
    >
      Accent
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton disabled snapshot 1`] = `
<DocumentFragment>
  <button
    disabled=""
    style="color: rgb(130, 130, 130); background-color: rgb(224, 224, 224); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 0px 10px;"
    >
      Disabled
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton error snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(235, 87, 87); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 0px 10px;"
    >
      Error
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview special-chars snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      style="display: flex; align-items: center;"
    >
      <svg
        aria-hidden="true"
        class="octicon"
        fill="currentColor"
        height="16"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      data-testid="label"
      style="padding: 0px 10px;"
    >
      s%~\`
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton primary snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 0px 10px;"
    >
      Primary
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton success snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(33, 150, 83); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 0px 10px;"
    >
      Success
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton warning snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(235, 87, 87); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 0px 10px;"
    >
      Warning
    </div>
  </button>
</DocumentFragment>
`;
